--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "debrid-search",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "Stremio Addon to search downloads and torrents in your Debrid cloud",
 	"main": "server.js",
 	"scripts": {
@@ -19,7 +19,8 @@
 		"fuse.js": "^6.6.2",
 		"node-fetch": "^3.2.6",
 		"real-debrid-api": "^1.1.0",
-		"stremio-addon-sdk": "^1.6.10"
+		"stremio-addon-sdk": "^1.6.10",
+		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#aeae91e512741910bc479ac57dcb0ce78bad3ee0"
 	},
 	"keywords": [
 		"stremio",
@@ -30,7 +31,7 @@
 		"nodemon": "^3.0.1"
 	},
 	"engines": {
-		"node": ">=18.x",
-		"npm": ">=9.x"
+		"node": "^18.x",
+		"npm": "^9.x"
 	}
 }
