--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "debrid-search",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"description": "Stremio Addon to search downloads and torrents in your Debrid cloud",
 	"main": "server.js",
 	"scripts": {
@@ -18,7 +18,7 @@
 		"express": "^4.18.2",
 		"fuse.js": "^6.6.2",
 		"node-fetch": "^3.2.6",
-		"real-debrid-api": "^1.1.0",
+		"real-debrid-api": "git://github.com/TheBeastLT/node-real-debrid.git#d1f7eaa8593b947edbfbc8a92a176448b48ef445",
 		"stremio-addon-sdk": "^1.6.10",
 		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#aeae91e512741910bc479ac57dcb0ce78bad3ee0"
 	},
