--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
 		"@types/node": "^18.0.6",
 		"cors": "^2.8.5",
 		"debrid-link-api": "^1.0.1",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-rate-limit": "^7.1.3",
 		"fuse.js": "^6.6.2",
+		"loglevel": "^1.8.1",
 		"node-fetch": "^3.2.6",
 		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#aeae91e512741910bc479ac57dcb0ce78bad3ee0",
+		"prom-client": "^12.0.0",
 		"real-debrid-api": "git://github.com/TheBeastLT/node-real-debrid.git#d1f7eaa8593b947edbfbc8a92a176448b48ef445",
 		"request-ip": "^3.3.0",
-		"stremio-addon-sdk": "^1.6.10"
+		"stremio-addon-sdk": "^1.6.10",
+		"swagger-stats": "^0.99.7"
 	},
 	"keywords": [
 		"stremio",
