--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"dependencies": {
 		"@types/node": "^18.0.6",
+		"all-debrid-api": "^1.1.0",
 		"cors": "^2.8.5",
 		"debrid-link-api": "^1.0.1",
 		"dotenv": "^16.3.1",
