--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
 		"loglevel": "^1.8.1",
 		"node-fetch": "^3.2.6",
 		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#022408972c2a040f846331a912a6a8487746a654",
+		"premiumize-api": "^1.0.3",
 		"prom-client": "^12.0.0",
 		"real-debrid-api": "git://github.com/TheBeastLT/node-real-debrid.git#d1f7eaa8593b947edbfbc8a92a176448b48ef445",
 		"request-ip": "^3.3.0",
 		"stremio-addon-sdk": "^1.6.10",
-		"swagger-stats": "^0.99.7"
+		"swagger-stats": "^0.99.7",
+		"urlencode": "^2.0.0"
 	},
 	"keywords": [
 		"stremio",
