--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "debrid-search",
-	"version": "0.1.9",
+	"version": "0.1.10",
 	"description": "Stremio Addon to search downloads and torrents in your Debrid cloud",
 	"main": "server.js",
 	"scripts": {
@@ -12,19 +12,20 @@
 	"license": "MIT",
 	"type": "module",
 	"dependencies": {
+		"@torbox/torbox-api": "^1.0.6",
 		"@types/node": "^18.0.6",
-		"all-debrid-api": "^1.1.0",
+		"all-debrid-api": "^1.2.0",
 		"cors": "^2.8.5",
 		"debrid-link-api": "^1.0.1",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"express-rate-limit": "^7.1.3",
-		"fuse.js": "^6.6.2",
-		"loglevel": "^1.8.1",
-		"node-fetch": "^3.2.6",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"express-rate-limit": "^7.4.1",
+		"fuse.js": "^7.0.0",
+		"loglevel": "^1.9.2",
+		"node-fetch": "^3.3.2",
 		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#b98e2ba2fb64fd5fa1c34c620bd9050bbc2e271d",
 		"premiumize-api": "^1.0.3",
-		"prom-client": "^12.0.0",
+		"prom-client": "^14.2.0",
 		"real-debrid-api": "git://github.com/MrMonkey42/node-real-debrid.git#ea885a01e64c5543cda289c7fd1e8981d8c7d650",
 		"request-ip": "^3.3.0",
 		"stremio-addon-sdk": "^1.6.10",
@@ -37,7 +38,7 @@
 		"addons"
 	],
 	"devDependencies": {
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.1.7"
 	},
 	"engines": {
 		"node": "^18.x",
