fix: Remove package-lock.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"type": "module",
 	"dependencies": {
 		"@torbox/torbox-api": "^1.0.6",
-		"@types/node": "^18.0.6",
+		"@types/node": "^18.19.67",
 		"all-debrid-api": "^1.2.0",
 		"cors": "^2.8.5",
 		"debrid-link-api": "^1.0.1",
@@ -23,11 +23,12 @@
 		"fuse.js": "^7.0.0",
 		"loglevel": "^1.9.2",
 		"node-fetch": "^3.3.2",
-		"parse-torrent-title": "git://github.com/TheBeastLT/parse-torrent-title.git#b98e2ba2fb64fd5fa1c34c620bd9050bbc2e271d",
+		"parse-torrent-title": "github:TheBeastLT/parse-torrent-title#b98e2ba2fb64fd5fa1c34c620bd9050bbc2e271d",
 		"premiumize-api": "^1.0.3",
 		"prom-client": "^14.2.0",
-		"real-debrid-api": "git://github.com/MrMonkey42/node-real-debrid.git#ea885a01e64c5543cda289c7fd1e8981d8c7d650",
+		"real-debrid-api": "github:MrMonkey42/node-real-debrid#ea885a01e64c5543cda289c7fd1e8981d8c7d650",
 		"request-ip": "^3.3.0",
+		"router": "^1.3.8",
 		"stremio-addon-sdk": "^1.6.10",
 		"swagger-stats": "^0.99.7",
 		"urlencode": "^2.0.0"
@@ -42,6 +43,7 @@
 	},
 	"engines": {
 		"node": "^18.x",
-		"npm": "^9.x"
+		"npm": "^9.x",
+		"pnpm": "^9.x"
 	}
 }
